smolser-derive/tests/ui/fail/implicit_padding.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> tests/ui/fail/implicit_padding.rs:3:10
  |
3 | #[derive(Pod)]
  |          ^^^
  |
  = note: source type: `ImplicitPadding` (32 bits)
  = note: target type: `TypeWithoutPadding` (24 bits)
  = note: this error originates in the derive macro `Pod` (in Nightly builds, run with -Z macro-backtrace for more info)
